; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_fifo.c_av_fifo_freep.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_fifo.c_av_fifo_freep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @av_fifo_freep(i32** %0) #0 {
  %2 = alloca i32**, align 8
  store i32** %0, i32*** %2, align 8
  %3 = load i32**, i32*** %2, align 8
  %4 = icmp ne i32** %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load i32**, i32*** %2, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = call i32 @av_fifo_free(i32* %7)
  %9 = load i32**, i32*** %2, align 8
  store i32* null, i32** %9, align 8
  br label %10

10:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @av_fifo_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
